26_Kyverno/05_Ensure_Images_Trusted/registry-allowed.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ensure-images-from-trusted-repo
spec:
  validationFailureAction: enforce
  rules:
  - name: trusted-repo-check
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Only images from trusted repositories are allowed"
      pattern:
        spec:
          containers:
          - name: "*" # Pode ser qualquer nome
            image: "trustedrepo.com/*" #Imagens validadas pela Trustedrepo
